# operate

./: .dockerignore  .gitignore  Dockerfile  TODO  pyproject.toml
deploy/: operator.yaml
examples/: combined.yaml  crd.yaml  deployment.yaml  new.yaml  obj.yaml  sa.yaml
operate/: handlers.py
operate/gitea/: values.yaml
