[tool.poetry]
name = "operate"
version = "0.1.0"
description = ""
authors = ["rmccarth <rmccarth@alumni.cmu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
kopf = "^1.37.4"
async-timeout = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
